# PatchOpsIII

./: .gitignore  .gitkeep  Cargo.toml  LICENSE  PLAN_v1.2.0.md  README.md  bo3_enhanced.py  config.py  dxvk_manager.py  main.py  package.json  presets.json  requirements.txt  t7_patch.py  tsconfig.electron.json  tsconfig.json  updater.py  utils.py  version.py  vite.config.ts
Release Notes/: PatchOpsIII v1.0.1.md  PatchOpsIII v1.0.2.md  PatchOpsIII v1.0.3-Beta.md  PatchOpsIII v1.0.3.md  PatchOpsIII v1.0.4.md  PatchOpsIII v1.0.md  PatchOpsIII v1.1.0.md  PatchOpsIII v1.1.1.md  PatchOpsIII v1.2.0.md  PatchOpsIII v1.2.1.md  PatchOpsIII v1.2.2.md  PatchOpsIII v1.3.0-beta.md  PatchOpsIII v1.3.0-beta2.md  PatchOpsIII v1.3.0-beta3.md  template.md
Stable/: PatchOpsIII.spec  dxvk_manager.py  t7_patch.py  utils.py
Testing/: PatchOpsIII.spec  README.md  config.py  dxvk_manager.py  main.py  t7_patch.py  utils.py
backend/: __init__.py  api.py  core_bridge.py  test_api_status_core.py  test_core_bridge.py
bo3-enhanced-proton/: README.md
installer/: patchops-backend-version.pyi
scripts/: brand-msi.cjs  build-backend-win.ts  build-backend.ts  build_appimage.sh  check-backend-build.ts  check-tauri-version.ts  clean-main.ts  clean-tauri-bundles.ts  convert_legacy_backups.py  dev-cleanup.ts  dev-lifecycle.ts  dev-server.ts  dev-tauri.ts  dev.ts  dist-tauri.ts  package-windows-zip.ps1  prepare-tauri-sidecars.ts  (+2 more)
src/: logging.rs  (+4 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  sidecar.rs  window.rs
(+62 files in other folders)
