[package]
name = "patchopsiii-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
directories = "5.0"
dirs = "5.0"
flume = "0.11"
iced = { version = "0.12", features = ["tokio", "svg"] }
once_cell = "1.19"
parking_lot = "0.12"
flate2 = "1.0"
rfd = "0.14"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.10"
thiserror = "1.0"
walkdir = "2.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
zstd = { version = "0.13", default-features = false, features = ["zstdmt"] }
xz2 = "0.1"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.1"
