[package]
name = "patchopsiii-tauri"
version = "1.3.0"
description = "PatchOpsIII Tauri host"
edition = "2021"

[build-dependencies]
serde_json = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
